--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Number1Store</title>
     <link rel="stylesheet" href="amazon.css">
 </head>
 <body>
@@ -577,3 +577,4 @@
 </body>
 
 </html>
+
